# AllBot

./: README.md
AllBot/: README.md  RedPrint AllBot Sync.txt  config.json  docker-compose.yml
AllBot/config/: default.json  production.json
AllBot/docs/: architecture.md
AllBot/scripts/: scaffold.ps1
AllBot/src/bots/GiGBot/: Invoke-GiGBot.ps1  README.md
AllBot/src/bots/OverBot/: Invoke-OverBot.ps1
AllBot/src/bots/SecuBot/: Invoke-SecuBot.ps1
AllBot/src/bots/StreamBot/: Invoke-StreamBot.ps1
AllBot/src/bots/ThermoBot/: Invoke-ThermoBot.ps1  README.md
AllBot/src/bots/ThinkBot/: Invoke-ThinkBot.ps1  README.md
AllBot/src/bots/ThrottleBot/: Invoke-ThrottleBot.ps1
AllBot/src/bots/VaultBot/: Invoke-VaultBot.ps1
AllBot/src/client/api/: package.json  server.js
AllBot/src/client/api/controllers/: throttleController.js
AllBot/src/client/api/middleware/: rateLimiter.js
AllBot/src/client/ui/: index.html  main.js
AllBot/src/orchestrator/: orchestrator.ps1
SemiRSuite/: README.md  main.py  pyproject.toml  routing.py  setup.py
SemiRSuite/docs/: MIT License.txt  index.rst
SemiRSuite/semir/: auth.py  authentication.py  dashboard.py  logging.py  model_manmagement.py  models.py  routing.py  security.py
SemiRSuite/tests/: __init__.py  test_models.py
